--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -1,20 +1,32 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit" x:Class="KrausRGA.UI.wndAppSetting"
-        Title="Application Setting" Height="1200" Width="800" WindowState="Maximized" Loaded="Window_Loaded" >
+        xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
+        x:Class="KrausRGA.UI.wndAppSetting"
+        Title="Application Setting" Height="1200" Width="800" WindowState="Maximized" Loaded="Window_Loaded"
+        Topmost="True"
+    >
     <Viewbox>
         <Grid Margin="0,3,2,5" Height="1200" Width="798" Background="#FFC7C7C7">
 
             <Border CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Margin="4,0,10,0" >
-                <Canvas Margin="0,0,-14,0" Background="#33000000">
+                <Canvas Margin="0,0,-14,689" Background="#33000000">
                     <Border Height="52" Background="#B2111111" Width="784" CornerRadius="5">
                         <TextBlock TextWrapping="Wrap" Text="Application Font Size Setting" FontSize="30" Foreground="White" Margin="10,6,242,0"/>
                     </Border>
-                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="356" Height="52" Width="174" Canvas.Left="8" >
+                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="422" Height="52" Width="174" Canvas.Left="585" >
                         <StackPanel Orientation="Horizontal" Margin="0,-1,0,1">
                             <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnlogout_Click" Width="52"/>
-                            <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="OK" Margin="-1,-2,-1,-1" Click="btnlogout_Click" Width="103"/>
+                            <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="OK" Margin="-1,0,-1,-1" Click="btnlogout_Click" Width="119"/>
+                        </StackPanel>
+                    </Border>
+                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="422" Height="56" Width="218" >
+                        <StackPanel Orientation="Horizontal">
+                            <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png" Width="36"/>
+                            <Button Style="{StaticResource ToolBarButtonBaseStyle}"
+                                    			x:Name="btnback"
+                                    			Content="Back" 
+                                    			Click="btnback_Click"  Width="179"  />
                         </StackPanel>
                     </Border>
                 </Canvas>
