--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KrausRGA.UI.wndNewRMANumber"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="New RMA Number" Height="1280"  Icon="/KrausRGA;component/Images/RGAICO.ico"  Width="800" Loaded="Window_Loaded_1" WindowState="Maximized">
+        Title="New RMA Number" Height="1280"  Icon="/KrausRGA;component/Images/RGAICO.ico" Topmost="True" Width="800" Loaded="Window_Loaded_1" WindowState="Maximized">
     <Viewbox>
         <Grid Height="1280" Width="800">
             <Border BorderThickness="2" BorderBrush="#FFD49919">
