--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-       x:Class="KrausRGA.UI.wndSrNumberInfo"
+       x:Class="KrausRGA.UI.wndSrNumberInfo" Topmost="True"
        Title="Kraus GRA System" Height="1280" Width="800" WindowState="Maximized"
        Loaded="Window_Loaded"  Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="Window_Closing">
     <Viewbox>
@@ -307,7 +307,7 @@
                                 </Canvas>
                             </Border>
 
-                            <Border>
+                            <Border Height="483">
                                 <Canvas Height="471">
                                     <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="241" >
                                         <Canvas x:Name="cvCheckboxHolder" Margin="-10,0,10,0">
@@ -432,13 +432,9 @@
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="422" Height="56" Width="234" Canvas.Left="556" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click" Width="59"/>
-                                            <Button Style="{StaticResource ToolBarButtonBaseStyle}"
-                                    			x:Name="btnHomeDone"
-                                    			Content="Done" 
-                                    			Click="btnHomeDone_Click" Width="169"  />
+                                            <Button Style="{StaticResource ToolBarButtonBaseStyle}" x:Name="btnHomeDone" Content="Done" Click="btnHomeDone_Click" Width="169"  />
                                         </StackPanel>
                                     </Border>
-
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="422" Height="56" Width="218" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png" Width="36"/>
@@ -448,7 +444,7 @@
                                     			Click="btnback_Click"  Width="179"  />
                                         </StackPanel>
                                     </Border>
-
+                                    <ProgressBar Visibility="Hidden" Name="PbrSaving" Height="47" Canvas.Left="223" Canvas.Top="424" Width="328" Value="10" IsIndeterminate="True" Background="{x:Null}" Foreground="#FF37A22C" />
                                 </Canvas>
                             </Border>
                         </StackPanel>
