--- a/KrausxRGA/UI/wndWait.xaml
+++ b/KrausxRGA/UI/wndWait.xaml
@@ -1,6 +1,6 @@
 ﻿<Window x:Class="KrausRGA.UI.wndWait"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Topmost="True"
         Title="wndWait"  Height="675" Width="1160" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None"
         Background="{x:Null}" Foreground="{x:Null}" WindowState="Maximized" AllowsTransparency="True" Name="WaitWindow">
     <Viewbox>
@@ -8,7 +8,7 @@
 
             <Border BorderThickness="3" CornerRadius="30" Background="#7F000000" BorderBrush="#FF5ABBCB">
                 <Canvas Margin="-3,-3,3,3" Background="{x:Null}">
-                    <Label FontSize="35" FontWeight="Bold" Foreground="White" Content="Please wait saving records ..." Canvas.Top="505" Width="512" Canvas.Left="55" Background="{x:Null}"/>
+                    <Label FontSize="35" FontWeight="Bold" Foreground="White" Content="Please wait ..." Canvas.Top="505" Width="512" Canvas.Left="55" Background="{x:Null}"/>
                     <ProgressBar Height="35" Width="1300" RenderTransformOrigin="0.5,0.5" Canvas.Top="590" SmallChange="20" FontSize="60" FontWeight="Bold" LargeChange="50" Value="100" IsIndeterminate="True" Canvas.Left="55">
                         <ProgressBar.Effect>
                             <DropShadowEffect Color="#FF383940" BlurRadius="20" ShadowDepth="18"/>
