--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-       x:Class="KrausRGA.UI.wndSrNumberInfo" Topmost="True"
+       x:Class="KrausRGA.UI.wndSrNumberInfo" 
        Title="Kraus GRA System" Height="1280" Width="800" WindowState="Maximized"
        Loaded="Window_Loaded"  Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="Window_Closing">
     <Viewbox>
