--- a/KrausxRGA/UI/wndSlipPrint.xaml
+++ b/KrausxRGA/UI/wndSlipPrint.xaml
@@ -2,14 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="wndSlipPrint" Height="1.9in" Width="3.9in" Loaded="Window_Loaded_1">
-    <Grid Margin="10,4,6,2">
+    <Grid Margin="10,4,8,4">
         <TextBox HorizontalAlignment="Left" Height="23" Margin="370,32,-140,0" TextWrapping="Wrap" Text="TextBox" x:Name="txtTextToAdd" VerticalAlignment="Top" Width="120" />
-        <Border BorderBrush="Black" BorderThickness="2" x:Name="brdmain" CornerRadius="30" Margin="0,0,0,-2" Height="2in" >
-            <Canvas Margin="12,10,8,33">
+        <Border BorderBrush="Black" BorderThickness="2" x:Name="brdmain" CornerRadius="30" Margin="6,1,10,-1" Height="1.5in" >
+            <Canvas Margin="12,10,-2,5">
                 <TextBlock Text="Expiration :" RenderTransformOrigin="0.886,1.949" Canvas.Top="19" Height="15" FontSize="8" Canvas.Left="3" FontWeight="Bold" />
                 <TextBlock Text="Received By :" RenderTransformOrigin="0.886,1.949" Canvas.Top="34" Canvas.Left="3" Height="16" FontSize="8" FontWeight="Bold" />
                 <TextBlock Text="Reason :" RenderTransformOrigin="0.886,1.949" Canvas.Top="49" Canvas.Left="3" Height="16" FontSize="8" FontWeight="Bold" />
-                <Image  x:Name="imageBarcode" Height="45" Width="178" Canvas.Left="148" Canvas.Top="1" />
+                <Image  x:Name="imageBarcode" Height="45" Width="150" Canvas.Left="148" Canvas.Top="1" />
                 <TextBlock Text="Received :" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="4" Canvas.Top="3" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtReceivedDate" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="65" Canvas.Top="3" Width="77" TextWrapping="Wrap" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtExpiration" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="65" Canvas.Top="18" Width="77" TextWrapping="Wrap" FontWeight="Bold" />
@@ -17,9 +17,9 @@
                 <TextBlock Text="null" x:Name="txtReason" RenderTransformOrigin="-0.061,-1.256" Height="15" FontSize="8" Canvas.Left="64" Canvas.Top="50" Width="140" TextWrapping="Wrap" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtSRNumber" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Left" Canvas.Left="214" Canvas.Top="49" Width="77" TextWrapping="Wrap"/>
 
-                <Image  x:Name="image" Height="42" Width="307" Canvas.Left="10" Canvas.Top="76"  />
-                <Border Height="1" Width="317" Canvas.Top="73" BorderBrush="Gray" BorderThickness="1"/>
-                <TextBlock Text="null" x:Name="txtproductName" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Center" Canvas.Left="123" Canvas.Top="119" Width="87" TextWrapping="Wrap"/>
+                <Image  x:Name="image" Height="42" Width="212" Canvas.Left="34" Canvas.Top="73"/>
+                <Border Height="1" Width="282" Canvas.Top="70" BorderBrush="Gray" BorderThickness="1" Canvas.Left="3"/>
+                <TextBlock Text="null" x:Name="txtproductName" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Center" Canvas.Left="69" Canvas.Top="114" Width="87" TextWrapping="Wrap"/>
             </Canvas>
         </Border>
     </Grid>
