--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -13,7 +13,7 @@
                         <StackPanel Orientation="Vertical" Height="1280" Width="800">
                             <Border x:Name="bdrmain" Height="457" >
                                 <Canvas x:Name="cvsTb1main" Margin="0,0,10,0" Height="477">
-                                    <Border Height="227" Width="770" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
+                                    <Border Height="237" Width="770" CornerRadius="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
                                         <Canvas Margin="0,0,0,0">
                                             <Border Height="45" Width="769" Background="#B2111111" Canvas.Top="1" Canvas.Left="-3">
                                                 <TextBlock TextWrapping="Wrap" Text="RMA Details" FontSize="25" Foreground="White" Margin="10,6,351,0"/>
@@ -28,11 +28,14 @@
                                             <Label x:Name="lblVendorNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="427" Canvas.Top="87" Width="256" Height="33"/>
 
                                             <Label x:Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="161" Width="147" Canvas.Left="283"/>
-                                            <Label x:Name="lblVendorName" Style="{StaticResource lblVeriable}" Canvas.Left="425" Canvas.Top="163" Width="331" Height="62">
+                                            <Label x:Name="lblVendorName" Style="{StaticResource lblVeriable}" Canvas.Left="425" Canvas.Top="163" Width="331" Height="33">
                                                 <Label.Content>
-                                                    <TextBlock Text="N/A" Height="60" Width="331" TextWrapping="Wrap"/>
+                                                    <TextBlock Text="N/A" Height="28" Width="331" TextWrapping="Wrap"/>
                                                 </Label.Content>
                                             </Label>
+                                            <Label x:Name="lblCExpirationDate" Content="Expiration Date : " Style="{StaticResource lblConstant}" Canvas.Top="198" Width="164" Canvas.Left="267"/>
+                                            <Label x:Name="lblExpirationDate" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="427" Canvas.Top="198" Width="256" Height="33"/>
+
 
                                             <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="52" Width="127" Canvas.Left="4"/>
                                             <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="10" Canvas.Top="85" Style="{StaticResource combo}" IsReadOnly="True" IsEnabled="False"
