Increase Size of DatePicker

--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -10,7 +10,6 @@
                         <StackPanel Orientation="Vertical" Height="1280" Width="800">
                             <Border x:Name="bdrmain" Height="457" >
                                 <Canvas x:Name="cvsTb1main" Margin="0,0,10,0" Height="477">
-
                                     <Border Height="227" Width="770" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
                                         <Canvas Margin="0,0,0,0">
                                             <Border Height="45" Width="769" Background="#B2111111" Canvas.Top="1" Canvas.Left="-3">
@@ -20,8 +19,8 @@
                                             <TextBox x:Name="txtRMANumber" IsEnabled="False" Canvas.Left="433"  FontSize="15" Foreground="Red"  Text="Generate after saving this information." Canvas.Top="49" Width="257" Height="33"  />
 
                                             <Label x:Name="lblcRMARewDate" Content="RMA Request Date : " Style="{StaticResource lblConstant}" Canvas.Left="201" Canvas.Top="95" Width="193"/>
-                                           
-                                            <DatePicker x:Name="txtRMAReqDate" Canvas.Left="434" Canvas.Top="88" Width="256" Height="31" FontSize="15" />
+
+                                            <DatePicker x:Name="txtRMAReqDate" CalendarStyle="{StaticResource styleCalendar}" Canvas.Left="434" Canvas.Top="88" Width="250" Height="31" FontSize="15" />
                                             
 
                                             <Label x:Name="lblcVendorNumber" Content="Vendor Number : " Style="{StaticResource lblConstant}" Canvas.Top="133" Width="197" Canvas.Left="195"/>
@@ -29,9 +28,7 @@
 
                                             <Label x:Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="178" Width="169" Canvas.Left="223"/>
                                             <TextBox x:Name="txtVendorName"  Canvas.Left="435" Canvas.Top="161" Width="331" Height="62" FontSize="15"/>
-                                              
-                                          
-
+                                      
                                             <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="52" Width="150" Canvas.Left="28"/>
                                             <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="10" Canvas.Top="85" Style="{StaticResource combo}" IsReadOnly="True"
 													ItemsSource="{Binding RAMStatus}" DisplayMemberPath="Status" SelectedValuePath="ID" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929">
@@ -70,10 +67,7 @@
 
                                             <Label x:Name="lblcName" Content="Customer Name : " Style="{StaticResource lblConstant}" Canvas.Top="105" Width="158" Canvas.Left="3"/>
                                             <TextBox x:Name="txtName"   Canvas.Left="166" Canvas.Top="100" Width="239" Height="33" FontSize="15"/>
-                                                
-                                          
-                                            
-
+                                     
                                             <Label x:Name="lblcCustomerAddress" Content="Customer Address : " Style="{StaticResource lblConstant}" Canvas.Top="154" Width="168" Canvas.Left="-7"/>
 
                                             <TextBox x:Name="txtAddress" Canvas.Left="166" Canvas.Top="140"  Width="240" Height="56" FontSize="15"/>
