--- a/KrausxRGA/UI/wndSlipPrint.xaml
+++ b/KrausxRGA/UI/wndSlipPrint.xaml
@@ -1,25 +1,30 @@
 ﻿<Window x:Class="KrausRGA.UI.wndSlipPrint"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="wndSlipPrint" Height="1.9in" Width="3.9in" Loaded="Window_Loaded_1">
+        Title="wndSlipPrint" Height="208.4" Width="3.9in" Loaded="Window_Loaded_1">
     <Grid Margin="10,4,8,4">
         <TextBox HorizontalAlignment="Left" Height="23" Margin="370,32,-140,0" TextWrapping="Wrap" Text="TextBox" x:Name="txtTextToAdd" VerticalAlignment="Top" Width="120" />
-        <Border BorderBrush="Black" BorderThickness="2" x:Name="brdmain" CornerRadius="30" Margin="6,1,10,-1" Height="1.5in" >
+        <Border BorderBrush="Black" BorderThickness="2" x:Name="brdmain" CornerRadius="30" Margin="6,0,10,0" >
             <Canvas Margin="12,10,-2,5">
                 <TextBlock Text="Expiration :" RenderTransformOrigin="0.886,1.949" Canvas.Top="19" Height="15" FontSize="8" Canvas.Left="3" FontWeight="Bold" />
                 <TextBlock Text="Received By :" RenderTransformOrigin="0.886,1.949" Canvas.Top="34" Canvas.Left="3" Height="16" FontSize="8" FontWeight="Bold" />
                 <TextBlock Text="Reason :" RenderTransformOrigin="0.886,1.949" Canvas.Top="49" Canvas.Left="3" Height="16" FontSize="8" FontWeight="Bold" />
+                <TextBlock Text="RMA Status :" RenderTransformOrigin="0.886,1.949" Canvas.Top="64" Canvas.Left="3" Height="13" FontSize="8" FontWeight="Bold" />
+                <TextBlock Text="Item Status :" RenderTransformOrigin="0.886,1.949" Canvas.Top="78" Canvas.Left="4" Height="10" FontSize="8" FontWeight="Bold" />
                 <Image  x:Name="imageBarcode" Height="45" Width="150" Canvas.Left="148" Canvas.Top="1" />
                 <TextBlock Text="Received :" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="4" Canvas.Top="3" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtReceivedDate" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="65" Canvas.Top="3" Width="77" TextWrapping="Wrap" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtExpiration" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="65" Canvas.Top="18" Width="77" TextWrapping="Wrap" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtReceived" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" Canvas.Left="64" Canvas.Top="33" Width="77" TextWrapping="Wrap" FontWeight="Bold" />
                 <TextBlock Text="null" x:Name="txtReason" RenderTransformOrigin="-0.061,-1.256" Height="15" FontSize="8" Canvas.Left="64" Canvas.Top="50" Width="140" TextWrapping="Wrap" FontWeight="Bold" />
+                <TextBlock Text="null" x:Name="txtRMAStatus" RenderTransformOrigin="-0.061,-1.256" Height="15" FontSize="8" Canvas.Left="64" Canvas.Top="64" Width="140" TextWrapping="Wrap" FontWeight="Bold" />
+                <TextBlock Text="null" x:Name="txtItemStatus" RenderTransformOrigin="-0.061,-1.256" Height="15" FontSize="8" Canvas.Left="64" Canvas.Top="76" Width="140" TextWrapping="Wrap" FontWeight="Bold" />
+
                 <TextBlock Text="null" x:Name="txtSRNumber" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Left" Canvas.Left="214" Canvas.Top="49" Width="77" TextWrapping="Wrap"/>
 
-                <Image  x:Name="image" Height="42" Width="212" Canvas.Left="34" Canvas.Top="73"/>
-                <Border Height="1" Width="282" Canvas.Top="70" BorderBrush="Gray" BorderThickness="1" Canvas.Left="3"/>
-                <TextBlock Text="null" x:Name="txtproductName" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Center" Canvas.Left="10" Canvas.Top="115" Width="288" TextWrapping="Wrap"/>
+                <Image  x:Name="image" Height="42" Width="212" Canvas.Left="34" Canvas.Top="96"/>
+                <Border Height="1" Width="295" Canvas.Top="91" BorderBrush="Gray" BorderThickness="1" Canvas.Left="3"/>
+                <TextBlock Text="null" x:Name="txtproductName" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Center" Canvas.Left="10" Canvas.Top="139" Width="288" TextWrapping="Wrap"/>
             </Canvas>
         </Border>
     </Grid>
