--- a/KrausxRGA/UI/wndSlipPrint.xaml
+++ b/KrausxRGA/UI/wndSlipPrint.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="KrausRGA.UI.wndSlipPrint"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="wndSlipPrint" Height="208.4" Width="3.9in" Loaded="Window_Loaded_1">
+        Title="wndSlipPrint" Height="214" Width="3.9in" Loaded="Window_Loaded_1">
     <Grid Margin="10,4,8,4">
         <TextBox HorizontalAlignment="Left" Height="23" Margin="370,32,-140,0" TextWrapping="Wrap" Text="TextBox" x:Name="txtTextToAdd" VerticalAlignment="Top" Width="120" />
-        <Border BorderBrush="Black" BorderThickness="2" x:Name="brdmain" CornerRadius="30" Margin="6,0,10,0" >
+        <Border BorderBrush="Black" BorderThickness="2" x:Name="brdmain" CornerRadius="30" Margin="6,0,10,0" Height="170" >
             <Canvas Margin="12,10,-2,5">
                 <TextBlock Text="Expiration :" RenderTransformOrigin="0.886,1.949" Canvas.Top="19" Height="15" FontSize="8" Canvas.Left="3" FontWeight="Bold" />
                 <TextBlock Text="Received By :" RenderTransformOrigin="0.886,1.949" Canvas.Top="34" Canvas.Left="3" Height="16" FontSize="8" FontWeight="Bold" />
@@ -24,7 +24,7 @@
 
                 <Image  x:Name="image" Height="42" Width="212" Canvas.Left="34" Canvas.Top="96"/>
                 <Border Height="1" Width="295" Canvas.Top="91" BorderBrush="Gray" BorderThickness="1" Canvas.Left="3"/>
-                <TextBlock Text="null" x:Name="txtproductName" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Center" Canvas.Left="10" Canvas.Top="139" Width="288" TextWrapping="Wrap"/>
+                <TextBlock Text="null" x:Name="txtproductName" RenderTransformOrigin="-0.061,-1.256" Height="16" FontSize="8" FontWeight="Bold" TextAlignment="Center" Canvas.Left="10" Canvas.Top="141" Width="288" TextWrapping="Wrap"/>
             </Canvas>
         </Border>
     </Grid>
